[package]
name = "world-maps"
version = "0.1.0"
authors = ["Nick Massey <nickmass@nickmass.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libflate = "1.2.0"
lyon = "1.0.1"
prost = "0.11.6"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
smallvec = { version = "1.10.0", features = ["serde"] }
winit = "0.30"
math = { git = "https://github.com/nickmass/mass-math.git", features = [
    "bytemuck",
] }
wgpu = "26.0.1"
pollster = "0.2.5"
bytemuck = { version = "1.15.0", features = ["derive"] }
smartstring = "1.0.1"
notosans = "0.1.0"
fontdue = "0.8.0"
clap = { version = "4.1.3", features = ["derive"] }
bstr = { version = "1.1.0", features = ["serde"] }
env_logger = "0.11.3"
ahash = "0.8.12"
byteorder = "1.5.0"
anyhow = "1.0.98"
brotli = "8.0.1"
url = { version = "2.5.4", features = ["serde"] }

[build-dependencies]
prost-build = "0.11.6"
